Make sure z-index is used for landing page buttons

--- a/css/landing-style.css
+++ b/css/landing-style.css
@@ -431,7 +431,7 @@ section .innerText {
     display:none;
     margin-right:auto;
     margin-left: auto;
-    z-index:104;
+    z-index:104 !important;
     /* give it dimensions */
     /*min-height: 10em;*/
 }
@@ -457,7 +457,7 @@ section .innerText {
     top:inherit;
     display:none;
     margin-right: auto;
-    z-index:104;
+    z-index:104 !important;
     margin-left: auto;
     /* give it dimensions */
     /*min-height: 10em;*/
